feat types: create custom error type
